fixed the text alignment on img placeholder

--- a/projects/landing-page/styles.css
+++ b/projects/landing-page/styles.css
@@ -120,9 +120,13 @@ header {
 .image-placeholder{
     background-color: slategray;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: 22px;
+}
+.image-placeholder p {
+ text-align: center;
 }
 
 article {
